<resources>
    <string name="app_name">Yummy</string>
    <string name="AppName">Yummy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_first_screen_title"> Plan Your Meals Smartly </string>
    <string name="on_boarding_first_screen_desc">Create personalized meal plans that fit your lifestyle and goals</string>
    <string name="on_boarding_img_first_screen_desc">on_boarding_img_desc</string>
    <string name="onboarding_second_screen_title"> Eat Better Every Day </string>
    <string name="on_boarding_second_screen_desc">Organize your meals, save time, and enjoy healthier food choices</string>
    <string name="on_boarding_img_second_screen_desc">on_boarding_img_desc</string>
    <string name="btn_next"><![CDATA[>]]></string>
    <string name="tv_sign_in">Sign In</string>
    <string name="tv_welcome_back">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="continue_with">Or continue with</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="tv_crate_ac_account">Create an account</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="home_fragment">Home</string>
    <string name="favourite_fragment">Favourite</string>
    <string name="calender_fragment">Calender</string>
    <string name="profile_fragment">Profile</string>
    <string name="search_meals_hint">Search meals...</string>
    <string name="random_meal_name">Chicken Curry</string>
    <string name="random_meal_country">Indian</string>
    <string name="tv_country_name">Country</string>
    <string name="tv_meal_name">Meal Name</string>
    <string name="tv_popular_meals">Popular Meals</string>
    <string name="tv_meal_of_the_day">Meal of The Day</string>
    <string name="tvMealNameDetails">Honey Glazed Salmon</string>
    <string name="ingredients">Ingredients</string>
    <string name="btnStartCooking">▶ Start Cooking</string>
    <string name="tvInstructions">1. Prepare the glaze...\n2. Season the salmon...\n3. Pan-sear fillets...</string>
    <string name="how_to_cook">How to Cook</string>
    <string name="tvIngredientName">Carrots</string>
    <string name="tvIngredientMeasure">2 Lbs</string>
    <string name="tvFavMealName">Meal Name</string>
    <string name="tvFavMealCountry">Egypt</string>
    <string name="no_favorite_meals_yet">No favorite meals yet 🍽️</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="no_planned_meals_yet">NO planned meals yet🍽️</string>
    <string name="tvCalendarMealName">CalendarMealName\n</string>
    <string name="tvCalendarMealDate">CalendarMealDate</string>
    <string name="tvCalendarMealCountry">CalendarMealCountry</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="btn_logout">Logout</string>
    <string name="ingredient">Ingredient</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="meal_search_name">Meal Name</string>
</resources>