<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartCooking"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgMealDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/onboarding_first_screen" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom"
                        android:background="#80000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#66000000"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/tvMealNameDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:shadowColor="#000000"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:text="@string/tv_meal_name"
                            android:textColor="@android:color/white"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvMealDetailsCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_country_name"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:layout_margin="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:spacing="8dp">

                        <ImageButton
                            android:id="@+id/btnAddToFav"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/circle_bg"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp"
                            android:src="@drawable/ic_details_fav_unfill" />
                        />

                        <ImageButton
                            android:id="@+id/btnCalendar"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/circle_bg"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp"
                            android:src="@drawable/ic_calender" />

                    </LinearLayout>

                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/how_to_cook"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/tvInstructions"
                android:textColor="#444444"
                android:textSize="16sp" />

            <!-- YouTube Player -->
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnStartCooking"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/MainColor"
        android:text="@string/btnStartCooking"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
